--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
+    "axios": "^1.3.4",
+    "pinia": "^2.0.33",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.7",
-    "axios": "^1.3.4"
+    "vuetify": "^3.1.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
